--- a/components/LogoBig/LogoBig.module.css
+++ b/components/LogoBig/LogoBig.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  /* height: 100%; */
   width: 150px;
+
+  padding: 35px;
 
   background-color: var(--white);
 
@@ -23,4 +25,8 @@
   line-height: 84px;
 
   color: var(--black-light);
+}
+
+.word:nth-child(1n+2) {
+  margin-top: 50px;
 }
