--- a/src/app/start/styles.module.css
+++ b/src/app/start/styles.module.css
@@ -14,6 +14,8 @@
 
 .right-side {
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   flex-grow: 1;
-  justify-content: center;
 }
