chore(components): crated and styles new components.

--- a/components/LogoBig/LogoBig.module.css
+++ b/components/LogoBig/LogoBig.module.css
@@ -9,7 +9,7 @@
   background-color: var(--white);
 
   border-radius: 50px;
-  box-shadow: var(--box-shadow-1);
+  box-shadow: var(--box-shadow-medium);
 }
 
 .word {
