--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@ body {
   --black-lighter: #3b383b;
   --gray-light: #BDBCBD;
   --gray-lighter: #CED4DA;
+  --gray-lighter-secondary: #e8eef5;
 
   --orange: #FF9B73;
   --yellow: #FFC972;
