--- a/components/SignupForm/SignupForm.module.css
+++ b/components/SignupForm/SignupForm.module.css
@@ -1,4 +1,5 @@
-.password-field-wrapper {
+.password-field-wrapper,
+.password-confirm-field-wrapper {
   position: relative;
   display: flex;
 
@@ -7,11 +8,12 @@
   margin-top: 50px;
 }
 
-.password-field input {
+.password-field input,
+.password-confirm-field input {
   padding-right: 75px;
 }
 
-.sign-in-button {
+.sign-up-button {
   align-self: flex-end;
 
   margin-top: 50px;
