chore(app): updated page notes.

--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -36,7 +36,7 @@
 }
 
 .input:focus {
-  background-color: var(--gray-lighter-secondary);
+  background-color: var(--gray-lighter-second);
 
   transition: all 250ms ease;
 }
