--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,8 @@ body {
   --black-lighter: #3b383b;
   --gray-light: #BDBCBD;
   --gray-lighter: #CED4DA;
-  --gray-lighter-secondary: #e8eef5;
+  --gray-lighter-second: #e8eef5;
+  --gray-lighter-third: #F0F1F4;
 
   --orange: #FF9B73;
   --yellow: #FFC972;
