--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -7,6 +7,7 @@
   background-color: var(--black-light);
 
   box-shadow: var(--box-shadow-small);
+  border: none;
   border-radius: 50px;
 
   cursor: pointer;
