--- a/components/SideBar/SideBar.module.css
+++ b/components/SideBar/SideBar.module.css
@@ -15,6 +15,10 @@
   scale: 1.1;
 }
 
+.add-note-button:disabled {
+  pointer-events: none;
+}
+
 .add-note-button img {
   transition: all 0.3s ease-in-out;
 }
@@ -23,7 +27,6 @@
   scale: 1.1;
 }
 
-.add-note-button:hover img,
 .add-note-button--active img {
   transform: rotate(135deg);
 
