--- a/src/app/notes/styles.module.css
+++ b/src/app/notes/styles.module.css
@@ -32,11 +32,11 @@
   padding: 50px;
 }
 
-.searchInput {
+.search-input {
   margin-top: 10px;
 }
 
-.notesTitle {
+.notes-title {
   margin-top: 55px;
 
   font-family: var(--poppins);
@@ -46,4 +46,8 @@
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.50);
 
   color: var(--black-light);
+}
+
+.notes-container {
+  margin-top: 50px;
 }
