--- a/components/Notes/Notes.module.css
+++ b/components/Notes/Notes.module.css
@@ -1,3 +1,7 @@
 .root {
   display: grid;
+
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 300px;
+  grid-gap: 50px;
 }
