--- a/components/Notes/Notes.module.css
+++ b/components/Notes/Notes.module.css
@@ -1,7 +1,33 @@
 .root {
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 50px;
 
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 300px;
-  grid-gap: 50px;
+  /* display: grid;
+  align-content: flex-start;
+
+  grid-template-columns: repeat(auto-fit, 300px);
+  grid-gap: 50px; */
+
+  padding-bottom: 2px; 
+  padding-right: 2px;
+
+  overflow-y: auto;
+}
+
+.root::-webkit-scrollbar {
+  width: 10px;
+}
+
+.root::-webkit-scrollbar-track {
+  background-color: var(--gray-lighter-third);
+}
+
+.root::-webkit-scrollbar-thumb {
+  background-color: var(--gray-light);
+}
+
+.root::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gray-lighter);
 }
