--- a/components/Note/Note.module.css
+++ b/components/Note/Note.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  width: 300px;
+  min-width: 300px;
   height: 300px;
 
   padding: 15px;
@@ -66,7 +66,7 @@
 }
 
 .note-textarea {
-  width: calc(300px - 25px * 2);
+  width: 100%;
   height: calc(300px - 25px * 4);
 
   font-family: var(--poppins);
