--- a/src/app/notes/styles.module.css
+++ b/src/app/notes/styles.module.css
@@ -48,6 +48,17 @@
   color: var(--black-light);
 }
 
+.no-notes {
+  display: flex;
+  align-items: center;
+
+  font-family: var(--poppins);
+  font-size: 16px;
+  line-height: 18px;
+  font-style: italic;
+  color: var(--black-lighter);
+}
+
 .notes-container {
   margin-top: 50px;
 }
